--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ dist
 dist-ssr
 *.local
 
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.production.local
+
+# Supabase
+.supabase/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
